# syncopy

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.rst  README_DEV.md  __init__.py  asv.conf.json  asv_syncopy.yml  codecov.yml  conda2pip.py  dev_csd.py  dev_frontend.py  dev_granger.py  dev_tapsmofrq.py  devtest_frontend.py  environment.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  syncopy.yml  syncopy_m1macos.yml  test_backend.py  test_frontend.py  testdev_backend.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  syncopy-bug-report.md  syncopy-feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: bechmarks.yml  benchmarks.yml  benchmarks_asv_workflow.yml  cov_test_workflow.yml  fullparallel_workflow.yml  macos_tests_on_demand.yml
.gitlab/merge_request_templates/: checklist.md
benchmarks/: README.md  benchmarks.py
datatype/: __init__.py  core.py
doc/: Makefile  README.md  make.bat
doc/source/: README.rst  basedata.rst  conf.py  datatype.rst  examples.rst  index.rst  quickstart.rst  setup.rst  sitemap.rst  utils.rst
doc/source/_static/: ComputationalRoutine.ai  colors.css  esi-style.css
doc/source/_templates/: syncopy_base.rst  syncopy_class.rst
doc/source/developer/: comp_routine.rst  compute_kernels.rst  datatype.rst  developer_api.rst  developers.rst  io.rst  logging.rst  tools.rst
doc/source/quickstart/: add_nuisance.py  ar2_nw.py  damped_harm.py  quickstart.rst
doc/source/scripts/: qs_damped_harm.py  qs_synth_data1.py  select_example.py  synth_data1.py
doc/source/tutorials/: ar2_nw.py  connectivity.rst  fooof.rst  freqanalysis.rst  preproc_synthdata.py  preprocessing.rst  res_synthdata.py  resampling.rst  welch.rst  welch_params.txt
doc/source/user/: class_diagramm.mmd  complete_api.rst  concepts.rst  data.rst  data_basics.rst  data_handling.rst  datatype.rst  fieldtrip.rst  logging.rst  matlab_io.rst  parallel.rst  processing.rst  selectdata.rst  synth_data.rst  user_api.rst  users.rst  work-flow.mmd
examples/: __init__.py  ex_datatype.py
sfft/: Makefile  fft_slalom.py  myfft.h  reqs.txt  results.txt  wscript
sfft/python/sfft/: sfft.py
sfft/src/: fft.h
spykewave/: __init__.py
spykewave/datatype/: __init__.py  core.py  data_classes.py  data_methods.py
spykewave/examples/: __init__.py  ex_daskarray.py  ex_datatype.py  ex_mtmfft.py
spykewave/io/: __init__.py  load_raw_binary.py  load_spw_container.py  loader.py  read_raw_binary.py  reader.py  save_spw_container.py  saver.py  utils.py
spykewave/specest/: __init__.py  specest.py
spykewave/utils/: __init__.py  misc.py  spw_parsers.py  spy_parsers.py
syncopy/: .travis.yml  __init__.py
syncopy/connectivity/: AV_compRoutines.py  ST_compRoutines.py  __init__.py  connectivity_analysis.py  const_def.py  csd.py  granger.py  granger_causality.py  single_trial_compRoutines.py  wilson_sf.py
syncopy/datatype/: __init__.py  base_data.py  continuous_data.py  data_classes.py  data_methods.py  discrete_data.py  selector.py  statistical_data.py  util.py
syncopy/datatype/methods/: arithmetic.py  concat.py  copy.py  definetrial.py  padding.py  redefinetrial.py  selectdata.py  show.py  statistics.py
syncopy/examples/: __init__.py  ex_comproutine.py  ex_daskarray.py  ex_datatype.py  ex_mat.m  ex_mtmfft.py  ex_simple.py  ex_specest.py  ex_wavelet.py
syncopy/io/: __init__.py  _load_nwb.py  _read_nwb.py  load_ft.py  load_nwb.py  load_raw_binary.py  load_spy_container.py  load_tdt.py  loader.py  mne_conv.py  nwb.py  read_external.py  save_spy_container.py  saver.py  utils.py
syncopy/matlab/: LICENSE  README.md
syncopy/matlab/+spy/: SyncopyInfo.m  dtype_mat2py.m  ft_load_spy.m  ft_save_spy.m  ft_write_spy.m  load_spy.m  matlab_to_numpy_dtype.m  save_spy.m  write_spy.m
syncopy/matlab/tests/: test_spy.m
syncopy/nwanalysis/: AV_compRoutines.py  ST_compRoutines.py  __init__.py  connectivity_analysis.py  csd.py  granger.py  wilson_sf.py
syncopy/plotting/: __init__.py  _helpers.py  _plot_analog.py  _plot_spectral.py  _plotting.py  _singlepanelplot.py  config.py  helpers.py  mp_plotting.py  sp_plotting.py  spike_plotting.py  spy_plotting.py
syncopy/preproc/: __init__.py  butterworthCR.py  compRoutines.py  filteringCRs.py  firws.py  ica.py  preprocessing.py  resampledata.py  resampling.py
syncopy/shared/: __init__.py  computational_routine.py  const_def.py  dask_helpers.py  errors.py  filetypes.py  input_processors.py  input_validators.py  kwarg_decorators.py  latency.py  log.py  metadata.py  parsers.py  queries.py  tools.py
syncopy/specest/: README.md  __init__.py  _norm_spec.py  compRoutines.py  const_def.py  csd.py  fooof.py  fooofspy.py  freqanalysis.py  mtmconvol.py  mtmfft.py  specest.py  spfooof.py  stft.py  superlet.py  superlets.py  wavelet.py  welch.py
syncopy/spikes/: __init__.py  compRoutines.py  psth.py  spike_psth.py
syncopy/statistics/: __init__.py  compRoutines.py  jackknifing.py  misc.py  permut_test.py  psth.py  spike_psth.py  summary_stats.py  timelockanalysis.py
syncopy/synthdata/: __init__.py  analog.py  spikes.py  synth_data.py  utils.py
syncopy/tests/: README.md  __main__.py  _zombie_spawner.py  conftest.py  helpers.py  local_spy.py  misc.py  no_slurm.sh  run_tests.cmd  run_tests.sh  slurm_tests.sh  spy_setup.py  synth_data.py  test_attach_dataset.py  test_basedata.py  test_cfg.py  test_computationalroutine.py  test_concat.py  test_connectivity.py  test_continuousdata.py  test_datatype_util.py  test_datatypes.py  test_decorators.py  test_discretedata.py  test_ica.py  test_info.py  test_logging.py  test_metadata.py  test_mne_conv.py  test_nwb.py  test_packagesetup.py  test_parsers.py  test_plotting.py  test_preproc.py  test_redefinetrial.py  test_resampledata.py  test_resampling.py  test_selectdata.py  test_specest.py  test_specest_fooof.py  (+11 more)
syncopy/utils/: __init__.py  misc.py  parsers.py  spy_parsers.py
utils/: __init__.py
(+16 files in other folders)
