[tool.poetry]
name = "esi-syncopy"
packages = [
    {include = "syncopy"}
]
version = "2023.07"
license = "BSD-3-Clause"
readme="README.rst"
homepage="https://syncopy.org"
repository="https://github.com/esi-neuroscience/syncopy"
include = [
    "LICENSE",
]
classifiers = [
	    "Topic :: Scientific/Engineering",
	    "Environment :: Console",
	    "Framework :: Jupyter",
	    "Operating System :: OS Independent"
]
description = "A toolkit for user-friendly large-scale electrophysiology data analysis. Syncopy is compatible with the Matlab toolbox FieldTrip."
authors = ["Stefan Fürtinger <sfuerti@esi-frankfurt.de>", "Tim Schäfer <tim.schaefer@esi-frankfurt.de>", "Joscha Schmiedt <schmiedt@uni-bremen.de>", "Gregor Mönke <gregor.moenke@esi-frankfurt.de>"]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
h5py = ">=2.9"
dask = {version=">=2022.6", extras=["distributed"]}
dask-jobqueue = ">=0.8"
numpy = ">=1.10"
scipy = ">=1.10.0"
matplotlib = ">=3.5"
tqdm = ">=4.31"
natsort = "^8.1.0"
psutil = ">=5.9"
fooof = ">=1.0"
bokeh = "^3.1.1"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
pytest = "^7.0"
ipython = ">=8.10"
pytest-cov = "^3.0.0"
sphinx-book-theme = ">=1.0.1"
sphinx-automodapi = "^0.14.1"
pydata-sphinx-theme = ">=0.13.3"
numpydoc = "^1.4.0"
ipdb = "^0.13.9"
memory-profiler = "^0.60.0"
flake8 = "^3.9"
asv = "^0.5.1"
virtualenv = "^20.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
