[metadata]
name = syncopy
author = Ernst Strüngmann Institute (ESI) for Neuroscience in Cooperation with Max Planck Society
author-email = syncopy@esi-frankfurt.de
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
description = Systems Neuroscience Computing in Python
license = BSD-3
license_file = LICENSE
python_requires = >=3.7
home-page = https://syncopy.org
project_urls =
    Bug Tracker = https://github.com/esi-neuroscience/syncopy/issues
    Documentation = https://syncopy.org/quickstart.html
    Source Code = https://github.com/esi-neuroscience/syncopy
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[files]
packages = syncopy

[pbr]
skip_authors = True
skip_changelog = True
