[metadata]
version = attr: syncopy.__version__
name = esi-syncopy
author = Ernst Strüngmann Institute (ESI) for Neuroscience in Cooperation with Max Planck Society
author-email = syncopy@esi-frankfurt.de
description = Systems Neuroscience Computing in Python
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD-3
license_file = LICENSE
home-page = https://syncopy.org
project_urls =
    Bug Tracker = https://github.com/esi-neuroscience/syncopy/issues
    Documentation = https://syncopy.org/quickstart.html
    Source Code = https://github.com/esi-neuroscience/syncopy
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.data_files]
syncopy =
    CHANGELOG.md
    CITATION.cff
    conda2pip.py
    LICENSE
    README.rst
    syncopy.yml
    tox.ini
